language/move-lang/tests/move_check/liveness/dead_refs_simple_invalid.exp
error: 

   ┌── tests/move_check/liveness/dead_refs_simple_invalid.move:4:21 ───
   │
 4 │         let x_ref = &mut x;
   │                     ------ It is still being mutably borrowed by this reference
 5 │         _ = x;
   │             ^ Invalid copy of local 'x'
   │

error: 

   ┌── tests/move_check/liveness/dead_refs_simple_invalid.move:4:21 ───
   │
 4 │         let x_ref = &mut x;
   │                     ------ It is still being mutably borrowed by this reference
 5 │         _ = x;
 6 │         _ = move x;
   │             ^^^^^^ Invalid move of local 'x'
   │

error: 

    ┌── tests/move_check/liveness/dead_refs_simple_invalid.move:12:21 ───
    │
 12 │         let x_ref = &mut x;
    │                     ------ It is still being mutably borrowed by this reference
 13 │         _ = x;
    │             ^ Invalid copy of local 'x'
    │

error: 

    ┌── tests/move_check/liveness/dead_refs_simple_invalid.move:12:21 ───
    │
 12 │         let x_ref = &mut x;
    │                     ------ It is still being mutably borrowed by this reference
 13 │         _ = x;
 14 │         _ = move x;
    │             ^^^^^^ Invalid move of local 'x'
    │

